fixed broken css

--- a/front-end/style.css
+++ b/front-end/style.css
@@ -1,5 +1,20 @@
 body {
     background-color: #444444;
+    font-family: 'Raleway', sans-serif;
+}
+
+h1{
+    color :white;
+    text-shadow: 3px 3px 3px #BBB;
+    font-weight: 800;
+    text-align: center;
+}
+
+h3{
+    color :white;
+    text-shadow: 1px 1px 1px #BBB;
+    font-weight: 600;
+    text-align: right;
 }
             
 .header {
@@ -8,7 +23,17 @@ body {
     width: 100%;
 }
 
-.col-sm-8 {
+.offline-doc .page-header,
+.offline-free-doc .page-header {
+  height: 200vh !important;
+}
+
+.offline-doc .page-header:after,
+.offline-free-doc .page-header:after {
+  background: rgba(143, 107, 200, 0.5) !important;
+}
+
+.col-sm-8{
     background-color: #FFFFFF;
     padding-top: 30px;
     min-height: 525px; /* need to figure out how to do this responsively. Need JS for it, not natively supported in CSS itself */
@@ -30,22 +55,40 @@ body {
     z-index: 2;
     margin: 0 auto;
     text-align: center;
-    font-family: 'Font Awesome 5 Free';
+    font-family: 'Maven Pro', sans-serif;
+    font-size: 17px;
 }
 
 .navbar-brand {
     padding: 3px 28px 3px 2px;
 }
 
+
+
 /* Set height of the grid so .sidenav can be 100% (adjust as needed) */
 .row.content {
     height: 450px
 }
 
-/* Set gray background color and 100% height */
-.sidenav {
+/* Set gray background vending machine image and 100% height */
+.sidenavl {
     padding-top: 20px;
-    background-color: #f9efff;
+    background-color: RGB(150,110,213);
+    background: RGB(150,110,213) url("background-machine.png") left bottom;
+    background-size: 1400px;
+    
+}
+
+.sidenavr {
+    padding-top: 20px;
+    background-color: RGB(150,110,213);
+}
+
+/* Set gray background color and 100% height */
+.sidebg {
+    padding-top: 20px;
+    background-color: RGB(247,247,248);
+    
 }
 
 .row-eq-height {
@@ -59,6 +102,87 @@ body {
     max-width: 200px;
     max-height: 200px;
 }
+
+.jumbotron {
+  padding: 2rem 1rem;
+  margin-bottom: 2rem;
+  background-color: #e9ecef;
+  border-radius: 0.3rem;
+}
+
+
+@media (min-width: 576px) {
+  .jumbotron {
+    padding: 4rem 2rem;
+  }
+}
+
+.jumbotron-fluid {
+  padding-right: 0;
+  padding-left: 0;
+  border-radius: 0;
+}
+
+.page-header .carousel .carousel-indicators {
+  bottom: 60px;
+}
+
+.page-header>.container {
+  color: #fff;
+  margin: 100px;
+}
+
+.page-header .title {
+  color: #fff;
+  z-index:-1;
+}
+
+.page-header.header-small {
+  height: 65vh;
+  min-height: 65vh;
+}
+
+.page-header .iframe-container iframe {
+  width: 100%;
+  box-shadow: 0 16px 38px -12px rgba(0, 0, 0, 0.56), 0 4px 25px 0px rgba(0, 0, 0, 0.12), 0 8px 10px -5px rgba(0, 0, 0, 0.2);
+}
+
+.header-filter {
+  position: relative;
+}
+
+.header-filter:before,
+.header-filter:after {
+  position: absolute;
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+  display: block;
+  left: 0;
+  top: 0;
+  content: "";
+}
+
+.header-filter::before {
+  background: rgba(0, 0, 0, 0.5);
+}
+
+.header-filter .container {
+  z-index: 2;
+  position: relative;
+}
+
+.clear-filter::before {
+  background: none;
+}
+
+.purple-filter:after {
+  background: rgba(101, 47, 142, 0.64);
+  background: linear-gradient(45deg, rgba(101, 47, 142, 0.88) 0%, rgba(125, 46, 185, 0.45) 100%);
+  background: -moz-linear-gradient(135deg, rgba(101, 47, 142, 0.88) 0%, rgba(125, 46, 185, 0.45) 100%);
+  background: -webkit-linear-gradient(135deg, rgba(101, 47, 142, 0.88) 0%, rgba(125, 46, 185, 0.45) 100%);
+}
+
 
 /* Set black background color, white text and some padding */
 footer {
